; ModuleID = '/home/carl/AnghaBench/darwin-xnu/san/extr_kasan-test.c_test_memcmp.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/san/extr_kasan-test.c_test_memcmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kasan_test = type { i32 }

@STACK_ARRAY_SZ = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kasan_test*)* @test_memcmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_memcmp(%struct.kasan_test* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.kasan_test*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store %struct.kasan_test* %0, %struct.kasan_test** %3, align 8
  %6 = load %struct.kasan_test*, %struct.kasan_test** %3, align 8
  %7 = call i32 @TEST_START(%struct.kasan_test* %6)
  %8 = load i64, i64* @STACK_ARRAY_SZ, align 8
  %9 = call i32* @kalloc(i64 %8)
  store i32* %9, i32** %4, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %40

13:                                               ; preds = %1
  %14 = load i64, i64* @STACK_ARRAY_SZ, align 8
  %15 = add nsw i64 %14, 1
  %16 = call i32* @kalloc(i64 %15)
  store i32* %16, i32** %5, align 8
  %17 = load i32*, i32** %5, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %20, label %19

19:                                               ; preds = %13
  store i32 1, i32* %2, align 4
  br label %40

20:                                               ; preds = %13
  %21 = load i32*, i32** %4, align 8
  %22 = load i32*, i32** %5, align 8
  %23 = load i64, i64* @STACK_ARRAY_SZ, align 8
  %24 = call i32 @memcmp(i32* %21, i32* %22, i64 %23)
  %25 = load i32*, i32** %4, align 8
  %26 = load i32*, i32** %5, align 8
  %27 = getelementptr inbounds i32, i32* %26, i64 1
  %28 = load i64, i64* @STACK_ARRAY_SZ, align 8
  %29 = call i32 @memcmp(i32* %25, i32* %27, i64 %28)
  %30 = call i32 (...) @TEST_BARRIER()
  %31 = load %struct.kasan_test*, %struct.kasan_test** %3, align 8
  %32 = call i32 @TEST_FAULT(%struct.kasan_test* %31)
  %33 = load i32*, i32** %4, align 8
  %34 = load i32*, i32** %5, align 8
  %35 = load i64, i64* @STACK_ARRAY_SZ, align 8
  %36 = add nsw i64 %35, 1
  %37 = call i32 @memcmp(i32* %33, i32* %34, i64 %36)
  %38 = load %struct.kasan_test*, %struct.kasan_test** %3, align 8
  %39 = call i32 @TEST_NOFAULT(%struct.kasan_test* %38)
  store i32 0, i32* %2, align 4
  br label %40

40:                                               ; preds = %20, %19, %12
  %41 = load i32, i32* %2, align 4
  ret i32 %41
}

declare dso_local i32 @TEST_START(%struct.kasan_test*) #1

declare dso_local i32* @kalloc(i64) #1

declare dso_local i32 @memcmp(i32*, i32*, i64) #1

declare dso_local i32 @TEST_BARRIER(...) #1

declare dso_local i32 @TEST_FAULT(%struct.kasan_test*) #1

declare dso_local i32 @TEST_NOFAULT(%struct.kasan_test*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
